fix(controller): modify webhook generation
In pre version, secret was generated by controller, so that, after uninstallation, the secret will
still reamin in k8s. When install next time, contoller cannot not create a new secret, it will occur
an error.

This commit will get and check if someone has updated secret, or the
controller will update it.

--- a/deploy/lynx-controller/webhook.yaml
+++ b/deploy/lynx-controller/webhook.yaml
@@ -55,3 +55,13 @@ spec:
   selector:
     app: lynx
     component: lynx-controller
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: lynx-controller-tls
+  namespace: kube-system
+type: kubernetes.io/tls
+data:
+  tls.crt: ""
+  tls.key: ""
