--- a/tests/e2e/config/webhook.yaml
+++ b/tests/e2e/config/webhook.yaml
@@ -35,3 +35,13 @@ webhooks:
           - DELETE
         resources:
           - endpointgroups
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: lynx-controller-tls
+  namespace: kube-system
+type: kubernetes.io/tls
+data:
+  tls.crt: ""
+  tls.key: ""
