--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,6 @@ jobs:
         with:
           version: 2.3.1
           etcdVersion: 3.5.0
-      - run: echo "/usr/local/kubebuilder/bin" >> $GITHUB_PATH
       - name: setup openvswitch
         run: sudo sh -c "apt update && apt install -y openvswitch-switch && systemctl start openvswitch-switch"
       - name: run lynx unit test
@@ -53,21 +52,21 @@ jobs:
 
   run-deploy:
     runs-on: [ubuntu-20.04]
-
     steps:
       - uses: actions/checkout@v2
+
       - name: install k8s
         run: |
           curl -sfL https://get.k3s.io | K3S_KUBECONFIG_MODE=777 sh -
-          cat /etc/rancher/k3s/k3s.yaml
-          mkdir -p ~/.kube
-          cp /etc/rancher/k3s/k3s.yaml ~/.kube/config
-      - run: make images
-      - name: import images to k3s
+          mkdir -p ~/.kube && cp /etc/rancher/k3s/k3s.yaml ~/.kube/config
+
+      - name: build and import image
         run: |
-          docker save --output /tmp/lynx-release.tar lynx/release
-          sudo k3s ctr images import /tmp/lynx-release.tar
-      - run: make deploy-test
+          make images
+          docker save lynx/release | sudo k3s ctr images import -
+
+      - name: make kubernetes deploy test
+        run: make deploy-test
 
   run-e2e:
     runs-on: [ubuntu-20.04]
