--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,69 +13,110 @@ on:
     - cron: "0 23 * * *"
 
 jobs:
-  pr-check:
+  # pr-check:
+  #   runs-on: [self-hosted, pod]
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: run everoute unit test
+  #       run: |
+  #         make docker-test
+  #         make docker-race-test
+  #         make docker-cover-test
+  #     - uses: codecov/codecov-action@v2
+  #       with:
+  #         files: ./coverage.out
+
+  # static-check:
+  #   runs-on: [ubuntu-20.04]
+  #   if: ${{ github.event_name == 'pull_request' }}
+  #   steps:
+  #     - uses: actions/checkout@v2
+
+  #     - name: Check conventional commits
+  #       uses: webiny/action-conventional-commits@v1.1.0
+
+  #     - name: Check spelling
+  #       uses: crate-ci/typos@v1.0.4
+
+  #     - name: Check golang lint
+  #       uses: golangci/golangci-lint-action@v3
+  #       with:
+  #         version: v1.48.0
+  #         only-new-issues: true
+  #         # skip cache because of flaky behaviors
+  #         skip-build-cache: true
+  #         skip-pkg-cache: true
+
+  # run-e2e:
+  #   runs-on: [ubuntu-20.04]
+  #   steps:
+  #     - uses: actions/checkout@v2
+
+  #     - name: run everoute e2e test
+  #       run: sudo make docker-e2e-test
+
+  run-k8s-e2e:
     runs-on: [self-hosted, pod]
     steps:
       - uses: actions/checkout@v2
-      - name: run everoute unit test
+
+      - name: install kubectl
         run: |
-          make docker-test
-          make docker-race-test
-          make docker-cover-test
-      - uses: codecov/codecov-action@v2
-        with:
-          files: ./coverage.out
-
-  static-check:
-    runs-on: [ubuntu-20.04]
-    if: ${{ github.event_name == 'pull_request' }}
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Check conventional commits
-        uses: webiny/action-conventional-commits@v1.1.0
-
-      - name: Check spelling
-        uses: crate-ci/typos@v1.0.4
-
-      - name: Check golang lint
-        uses: golangci/golangci-lint-action@v3
-        with:
-          version: v1.48.0
-          only-new-issues: true
-          # skip cache because of flaky behaviors
-          skip-build-cache: true
-          skip-pkg-cache: true
-
-  run-e2e:
-    runs-on: [ubuntu-20.04]
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: run everoute e2e test
-        run: sudo make docker-e2e-test
-
-  run-k8s-e2e:
-    runs-on: [self-hosted, k8s]
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: clean old eveorute
-        run: sudo skaffold run -d=registry.smtx.io/everoute -f skaffold-clean.yaml
-
-      - name: wait clean process ready
-        run: kubectl wait po -n kube-system --for=condition=Ready=True -l app=everoute -l component=everoute-clean --timeout=3m
-
-      - name: restart system service pods
+          curl -LO "https://dl.k8s.io/release/v1.24.8/bin/linux/amd64/kubectl"
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/ 
+      
+      - name: copy sks managerment cluster kubeconfig
         run: |
-          kubectl get pods -n kube-system | awk '{print $1}' | grep "^coredns\|^metrics" | xargs kubectl delete pods -n kube-system
+          mkdir $HOME/.kube
+          touch $HOME/.kube/config
+          echo ${{ secrets.SKS_MGT_KUBECONFIG }} > $HOME/.kube/config
+          cat $HOME/.kube/config
+          kubectl get crd | grep smart
 
-      - name: stop clean pods
-        if: always()
-        run: kubectl delete -f hack/clean.yaml
+      - run: kubectl get crd | grep smart
+      
+      - name: allocate cluster vip
+        run: |
+          out=$(curl -X POST  'https://ip.dev.smtx.io/v1/ips?name=sdn1')
+          success=$(echo $out | grep "fullSuccess" |wc -l)
+          if [ $success != 1 ]; then exit 1; fi
+          ipright=${out#*\"ips\":[\"}
+          ip=${ipright%\"],\"ipNets\"*}
+          echo $ip
+          echo "VIP=$ip" >> $GITHUB_ENV
+      
+      - name: gen k8s cluster name
+        run: echo "CLUSTER_NAME=k8s-e2e-$RANDOM" >> $GITHUB_ENV
+
+      - name: prepare cluster yaml
+        run: |
+          echo "new k8s cluster name is ${{ env.CLUSTER_NAME }}"
+          sed -i s/{{k8s-e2e-cluster-name}}/${{ env.CLUSTER_NAME }}/g hack/kubesmartcluster.yaml.tmpl
+          echo "k8s cluster vip is ${{ env.VIP }}"
+          sed -i s/{{k8s-e2e-cluster-vip}}/${{ env.VIP }}/g hack/kubesmartcluster.yaml.tmpl
+      
+      - name: create k8s cluster
+        run: kubectl apply -f hack/kubesmartcluster.yaml.tmpl
+
+      - name: wait cluster creating...
+        run: |
+          k8sstatus="false"
+          for ((; i<=20; i++))
+          do
+            sleep 30
+            status=$(kubectl get KubeSmartCluster k8s-e2e16249 -o yaml  | grep controlPlaneAvailable)
+            if [ -z $status ];then break;fi
+            k8sstatus=${status#*controlPlaneAvailable: }
+            if [ $k8sstatus == "true" ];then break;fi
+          done
+          if [ $k8sstatus != "true" ];then exit 1;fi
+      
+      - name: copy new k8s cluster kubeconfig
+        run: kubectl get secrets ${{ env.CLUSTER_NAME }}-kubeconfig -o yaml > kubeconfig
 
       - name: build everoute and deploy
-        run: sudo skaffold run -d=registry.smtx.io/everoute
+        run: sudo skaffold run -d=registry.smtx.io/everoute --kubeconfig kubeconfig
 
       - name: wait everoute ready
         run: bash hack/check_ready.sh
@@ -92,156 +133,159 @@ jobs:
       - name: build e2e
         run: cd kubernetes && make all WHAT=test/e2e/e2e.test && make all WHAT=vendor/github.com/onsi/ginkgo/ginkgo
 
-      - name: remove remained ns in last test
-        run: kubectl get ns | grep "policy\|netpol"  | awk '{print $1}' | xargs kubectl delete ns || echo "finish"
-
       - name: run test cases
         run: bash hack/run-k8s-e2e.sh
+
+      - name: delete test k8s cluster
+        run: kubectl delete -f hack/kubesmartcluster.yaml.tmpl
+
+      - name: recycle vip
+        run: curl -X DELETE "https://ip.dev.smtx.io/v1/ips?name=sdn1&ip="${{ env.VIP }}
   
-  run-tower-e2e:
-    runs-on: [self-hosted, tower]
-    steps:
-      - uses: actions/checkout@v3
+  # run-tower-e2e:
+  #   runs-on: [self-hosted, tower]
+  #   steps:
+  #     - uses: actions/checkout@v3
       
-      # TODO: Not implemented
+  #     # TODO: Not implemented
 
-      # - name: reset environment
+  #     # - name: reset environment
 
-      # - name: build everoute
+  #     # - name: build everoute
 
-      # - name: install everoute
+  #     # - name: install everoute
 
-      # - name: setup environment
+  #     # - name: setup environment
 
-      - name: skip-known-bugs
-        run: git am -s < hack/0001-Skip-known-bugs-in-everoute-1.1.0.patch
+  #     - name: skip-known-bugs
+  #       run: git am -s < hack/0001-Skip-known-bugs-in-everoute-1.1.0.patch
         
-      - name: run test cases
-        run: sudo go test ./tests/e2e/cases/. -v --count=1 --timeout=1h
+  #     - name: run test cases
+  #       run: sudo go test ./tests/e2e/cases/. -v --count=1 --timeout=1h
 
-  generate-check:
-    runs-on: [ubuntu-20.04]
-    steps:
-      - uses: actions/checkout@v2
+  # generate-check:
+  #   runs-on: [ubuntu-20.04]
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-      - name: make docker-generate
-        run: sudo sh -c "make image-generate && make docker-generate"
+  #     - name: make docker-generate
+  #       run: sudo sh -c "make image-generate && make docker-generate"
 
-      - name: check if code changes
-        run: sudo sh -c "git add -A && git diff HEAD --exit-code"
+  #     - name: check if code changes
+  #       run: sudo sh -c "git add -A && git diff HEAD --exit-code"
 
-      - name: show message if failed
-        if: ${{ failure() }}
-        run: echo "::error::Please run \"make generate\" or \"make docker-generate\" before commit."
+  #     - name: show message if failed
+  #       if: ${{ failure() }}
+  #       run: echo "::error::Please run \"make generate\" or \"make docker-generate\" before commit."
 
-  slack-notification:
-    if: ${{ always() }}
-    needs: [ pr-check,static-check,run-e2e,run-k8s-e2e,run-tower-e2e,generate-check ]
-    runs-on: [ ubuntu-20.04 ]
-    env:
-      SLACK_COLOR: 2EA44F
-      RESULT_PR_CHECK: ":white_check_mark:"
-      RESULT_STATIC_CHECK: ":white_check_mark:"
-      RESULT_RUN_E2E: ":white_check_mark:"
-      RESULT_RUN_K8S_E2E: ":white_check_mark:"
-      RESULT_RUN_TOWER_E2E: ":white_check_mark:"
-      RESULT_GENERATE_CHECK: ":white_check_mark:"
-    steps:
-      - if: ${{ needs.pr-check.result == 'failure'}}
-        run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_PR_CHECK=:x:" >> $GITHUB_ENV
-      - if: ${{ needs.static-check.result == 'failure'}}
-        run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_STATIC_CHECK=:x:" >> $GITHUB_ENV
-      - if: ${{ needs.run-e2e.result == 'failure'}}
-        run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_RUN_E2E=:x:" >> $GITHUB_ENV
-      - if: ${{ needs.run-k8s-e2e.result == 'failure'}}
-        run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_RUN_K8S_E2E=:x:" >> $GITHUB_ENV
-      - if: ${{ needs.run-tower-e2e.result == 'failure'}}
-        run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_RUN_TOWER_E2E=:x:" >> $GITHUB_ENV
-      - if: ${{ needs.generate-check.result == 'failure'}}
-        run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_GENERATE_CHECK=:x:" >> $GITHUB_ENV
+  # slack-notification:
+  #   if: ${{ always() }}
+  #   needs: [ pr-check,static-check,run-e2e,run-k8s-e2e,run-tower-e2e,generate-check ]
+  #   runs-on: [ ubuntu-20.04 ]
+  #   env:
+  #     SLACK_COLOR: 2EA44F
+  #     RESULT_PR_CHECK: ":white_check_mark:"
+  #     RESULT_STATIC_CHECK: ":white_check_mark:"
+  #     RESULT_RUN_E2E: ":white_check_mark:"
+  #     RESULT_RUN_K8S_E2E: ":white_check_mark:"
+  #     RESULT_RUN_TOWER_E2E: ":white_check_mark:"
+  #     RESULT_GENERATE_CHECK: ":white_check_mark:"
+  #   steps:
+  #     - if: ${{ needs.pr-check.result == 'failure'}}
+  #       run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_PR_CHECK=:x:" >> $GITHUB_ENV
+  #     - if: ${{ needs.static-check.result == 'failure'}}
+  #       run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_STATIC_CHECK=:x:" >> $GITHUB_ENV
+  #     - if: ${{ needs.run-e2e.result == 'failure'}}
+  #       run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_RUN_E2E=:x:" >> $GITHUB_ENV
+  #     - if: ${{ needs.run-k8s-e2e.result == 'failure'}}
+  #       run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_RUN_K8S_E2E=:x:" >> $GITHUB_ENV
+  #     - if: ${{ needs.run-tower-e2e.result == 'failure'}}
+  #       run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_RUN_TOWER_E2E=:x:" >> $GITHUB_ENV
+  #     - if: ${{ needs.generate-check.result == 'failure'}}
+  #       run: echo "SLACK_COLOR=DF0000" >> $GITHUB_ENV && echo "RESULT_GENERATE_CHECK=:x:" >> $GITHUB_ENV
 
-      - if: ${{ needs.pr-check.result == 'cancelled'}}
-        run: echo "RESULT_PR_CHECK=:ballot_box_with_check:" >> $GITHUB_ENV
-      - if: ${{ needs.static-check.result == 'cancelled'}}
-        run: echo "RESULT_STATIC_CHECK=:ballot_box_with_check:" >> $GITHUB_ENV
-      - if: ${{ needs.run-e2e.result == 'cancelled'}}
-        run: echo "RESULT_RUN_E2E=:ballot_box_with_check:" >> $GITHUB_ENV
-      - if: ${{ needs.run-k8s-e2e.result == 'cancelled'}}
-        run: echo "RESULT_RUN_K8S_E2E=:ballot_box_with_check:" >> $GITHUB_ENV
-      - if: ${{ needs.run-tower-e2e.result == 'cancelled'}}
-        run: echo "RESULT_RUN_TOWER_E2E=:ballot_box_with_check:" >> $GITHUB_ENV
-      - if: ${{ needs.generate-check.result == 'cancelled'}}
-        run: echo "RESULT_GENERATE_CHECK=:ballot_box_with_check:" >> $GITHUB_ENV
+  #     - if: ${{ needs.pr-check.result == 'cancelled'}}
+  #       run: echo "RESULT_PR_CHECK=:ballot_box_with_check:" >> $GITHUB_ENV
+  #     - if: ${{ needs.static-check.result == 'cancelled'}}
+  #       run: echo "RESULT_STATIC_CHECK=:ballot_box_with_check:" >> $GITHUB_ENV
+  #     - if: ${{ needs.run-e2e.result == 'cancelled'}}
+  #       run: echo "RESULT_RUN_E2E=:ballot_box_with_check:" >> $GITHUB_ENV
+  #     - if: ${{ needs.run-k8s-e2e.result == 'cancelled'}}
+  #       run: echo "RESULT_RUN_K8S_E2E=:ballot_box_with_check:" >> $GITHUB_ENV
+  #     - if: ${{ needs.run-tower-e2e.result == 'cancelled'}}
+  #       run: echo "RESULT_RUN_TOWER_E2E=:ballot_box_with_check:" >> $GITHUB_ENV
+  #     - if: ${{ needs.generate-check.result == 'cancelled'}}
+  #       run: echo "RESULT_GENERATE_CHECK=:ballot_box_with_check:" >> $GITHUB_ENV
 
-      - name: generate short commit sha
-        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-7`" >> $GITHUB_ENV
+  #     - name: generate short commit sha
+  #       run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-7`" >> $GITHUB_ENV
 
-      - name: send message to slack
-        uses: slackapi/slack-github-action@v1.17.0
-        with:
-          payload: |
-            {
-              "blocks": [
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "Finish Github Action CI, details <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} | `here`>"
-                  }
-                }
-              ],
-              "attachments": [
-                {
-                  "color": "${{ env.SLACK_COLOR }}",
-                  "blocks": [
-                    {"type": "section","fields": [
-                        {
-                          "type": "mrkdwn",
-                          "text": "*type: * ${{ github.event_name }}"
-                        },
-                        {
-                          "type": "mrkdwn",
-                          "text": "*ref: * ${{ github.ref }}"
-                        },
-                        {
-                          "type": "mrkdwn",
-                          "text": "*actor: * <${{ github.server_url }}/${{ github.actor }} | `${{ github.actor }}`>"
-                        },
-                        {
-                          "type": "mrkdwn",
-                          "text": "*commit: * <${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }} | `${{ env.SHORT_SHA }}`>"
-                        }
-                    ]},
-                    {"type": "section","fields": [
-                      {
-                        "type": "mrkdwn",
-                        "text": "${{ env.RESULT_PR_CHECK }} => *pr-check*"
-                      },
-                      {
-                        "type": "mrkdwn",
-                        "text": "${{ env.RESULT_STATIC_CHECK }} => *static-check*"
-                      },
-                      {
-                        "type": "mrkdwn",
-                        "text": "${{ env.RESULT_RUN_E2E }} => *run-e2e*"
-                      },
-                      {
-                        "type": "mrkdwn",
-                        "text": "${{ env.RESULT_RUN_K8S_E2E }} => *run-k8s-e2e*"
-                      },
-                      {
-                        "type": "mrkdwn",
-                        "text": "${{ env.RESULT_RUN_TOWER_E2E }} => *run-tower-e2e*"
-                      },
-                      {
-                        "type": "mrkdwn",
-                        "text": "${{ env.RESULT_GENERATE_CHECK }} => *generate-check*"
-                      }
-                    ]}
-                  ]
-                }
-              ]
-            }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_E2E_URL }}
-          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+  #     - name: send message to slack
+  #       uses: slackapi/slack-github-action@v1.17.0
+  #       with:
+  #         payload: |
+  #           {
+  #             "blocks": [
+  #               {
+  #                 "type": "section",
+  #                 "text": {
+  #                   "type": "mrkdwn",
+  #                   "text": "Finish Github Action CI, details <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} | `here`>"
+  #                 }
+  #               }
+  #             ],
+  #             "attachments": [
+  #               {
+  #                 "color": "${{ env.SLACK_COLOR }}",
+  #                 "blocks": [
+  #                   {"type": "section","fields": [
+  #                       {
+  #                         "type": "mrkdwn",
+  #                         "text": "*type: * ${{ github.event_name }}"
+  #                       },
+  #                       {
+  #                         "type": "mrkdwn",
+  #                         "text": "*ref: * ${{ github.ref }}"
+  #                       },
+  #                       {
+  #                         "type": "mrkdwn",
+  #                         "text": "*actor: * <${{ github.server_url }}/${{ github.actor }} | `${{ github.actor }}`>"
+  #                       },
+  #                       {
+  #                         "type": "mrkdwn",
+  #                         "text": "*commit: * <${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }} | `${{ env.SHORT_SHA }}`>"
+  #                       }
+  #                   ]},
+  #                   {"type": "section","fields": [
+  #                     {
+  #                       "type": "mrkdwn",
+  #                       "text": "${{ env.RESULT_PR_CHECK }} => *pr-check*"
+  #                     },
+  #                     {
+  #                       "type": "mrkdwn",
+  #                       "text": "${{ env.RESULT_STATIC_CHECK }} => *static-check*"
+  #                     },
+  #                     {
+  #                       "type": "mrkdwn",
+  #                       "text": "${{ env.RESULT_RUN_E2E }} => *run-e2e*"
+  #                     },
+  #                     {
+  #                       "type": "mrkdwn",
+  #                       "text": "${{ env.RESULT_RUN_K8S_E2E }} => *run-k8s-e2e*"
+  #                     },
+  #                     {
+  #                       "type": "mrkdwn",
+  #                       "text": "${{ env.RESULT_RUN_TOWER_E2E }} => *run-tower-e2e*"
+  #                     },
+  #                     {
+  #                       "type": "mrkdwn",
+  #                       "text": "${{ env.RESULT_GENERATE_CHECK }} => *generate-check*"
+  #                     }
+  #                   ]}
+  #                 ]
+  #               }
+  #             ]
+  #           }
+  #       env:
+  #         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_E2E_URL }}
+  #         SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
